--- a/DefectServer/DefectServer.csproj
+++ b/DefectServer/DefectServer.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\api\DefectsController.cs" />
     <Compile Include="Controllers\DefectsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -203,10 +204,15 @@
     <Compile Include="Migrations\201708211333103_AddDateCreated.Designer.cs">
       <DependentUpon>201708211333103_AddDateCreated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708230617312_AddJobModel.cs" />
+    <Compile Include="Migrations\201708230617312_AddJobModel.Designer.cs">
+      <DependentUpon>201708230617312_AddJobModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\Defect.cs" />
     <Compile Include="Models\DefectServerContext.cs" />
+    <Compile Include="Models\Job.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoutingExtensions.cs" />
   </ItemGroup>
@@ -285,6 +291,12 @@
     </Content>
     <Content Include="Views\Home\List.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Defects\Create.cshtml" />
+    <Content Include="Views\Defects\Delete.cshtml" />
+    <Content Include="Views\Defects\Details.cshtml" />
+    <Content Include="Views\Defects\Edit.cshtml" />
+    <Content Include="Views\Defects\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -302,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708211333103_AddDateCreated.resx">
       <DependentUpon>201708211333103_AddDateCreated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708230617312_AddJobModel.resx">
+      <DependentUpon>201708230617312_AddJobModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
