--- a/DefectServer/Web.Debug.config
+++ b/DefectServer/Web.Debug.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
     <connectionStrings>
-    <add name="DefectServerContext" connectionString="Server=localhost\SQLEXPRESS;Database=Defects;User Id=dbdev;Password=dbdev;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>  
+    <add name="DefectServerContext" connectionString="Server=localhost\SQLEXPRESS;Database=Defects;User Id=dbdev;Password=tl1000;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>  
   </connectionStrings>
   <system.web>
     <!--
